--- a/Client/cms-client/src/components/mainpage/MainPage.css
+++ b/Client/cms-client/src/components/mainpage/MainPage.css
@@ -4,11 +4,12 @@
     height: 100vh;
     background-size: cover;
 }
-.mainpage h1{
+.title{
+    font-weight: bold;
     color: white;
    text-shadow: 1px 3px 5px black;
    text-align: center;
-   /* padding-top: 150px; */
+   padding-top: 50px;
 }
 .box{
     border: 3px;
@@ -17,7 +18,7 @@
     border-color: black;
     border-style: solid;
     border-radius: 8px;
-    margin-left: 5rem;
+    /* margin-left: 7rem; */
 }
 .box1{
     border: 3px;
@@ -25,7 +26,7 @@
     width: 130px;
     border-color: black;
     border-style: solid;
-    margin-left: 5rem;
+    /* margin-left: 7rem; */
     border-radius: 8px;
     
 }
@@ -35,7 +36,7 @@
     width: 130px;
     border-color: black;
     border-style: solid;
-    margin-left: 5rem;
+    /* margin-left: 7rem; */
     border-radius: 8px;
 }
 .box h5{
@@ -45,7 +46,7 @@
     font-weight: bold;
     text-shadow: 1px 3px 5px rgb(0, 68, 255);
     transform: scale(1);
-    transition: all 0.05s ease-in-out;
+    transition: all 0.10s ease-in-out;
 }
 .box img{
     padding-left: 10px;
@@ -57,6 +58,8 @@
     color: black;
     font-weight: bold;
     text-shadow: 1px 3px 5px rgb(0, 68, 255);
+    transform: scale(1);
+    transition: all 0.10s ease-in-out;
 
 }
 .box1 img{
@@ -68,15 +71,68 @@
     color: black;
     font-weight: bold;
     text-shadow: 1px 3px 5px rgb(0, 68, 255);
-
+    transform: scale(1);
+    transition: all 0.10s ease-in-out;
 }
 .box2 img{
     padding-left: 10px;
 }
 
-.a:hover{
+.box:hover h5{
     cursor: pointer;
     transform: scale(1.3);
     color: white;
     
+}
+.box1:hover h5{
+    cursor: pointer;
+    transform: scale(1.3);
+    color: white;
+    
+}
+.box2:hover h5{
+    cursor: pointer;
+    transform: scale(1.3);
+    color: white;
+    
+}
+
+.mainbox{
+   display: grid;
+   justify-content: center;
+  
+}
+@media(min-width:767px) {
+    .mainbox{
+        display: flex;
+        justify-content: center;
+        padding-top: 8rem;    
+       
+     }
+     .box1{
+        margin-left: 2rem;
+     }
+     .box2{
+        margin-left: 2rem;
+     }
+     .title{
+        padding-top: 170px;
+     }
+}
+@media(min-width:992px) {
+    .mainbox{
+        display: flex;
+        justify-content: center;
+        padding-top: 10rem;    
+       
+     }
+     .box1{
+        margin-left: 2rem;
+     }
+     .box2{
+        margin-left: 2rem;
+     }
+     .title{
+        padding-top: 180px;
+     }
 }
