--- a/Client/cms-client/src/components/AdminPages/ViewSemester/ViewSemester.css
+++ b/Client/cms-client/src/components/AdminPages/ViewSemester/ViewSemester.css
@@ -7,7 +7,7 @@
 }
 .addbtn{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding-bottom: 15px;
     margin-right: 15px;
 }
