--- a/Client/cms-client/src/components/StudentPages/Profile/Profile.css
+++ b/Client/cms-client/src/components/StudentPages/Profile/Profile.css
@@ -1,3 +1,15 @@
+.psBtn{
+    background-color: transparent !important;
+    text-decoration: underline !important;
+    outline: none !important;
+    border-color: transparent !important;
+    background: none !important;
+    color: blue !important;
+    border-style: none !important;
+    text-transform: none !important;
+}
+
+
 @media (max-width:830px) {
     .leftarrange1{
         margin-left: 100px;
