--- a/Client/cms-client/src/components/StudentPages/Clubs/Clubs.css
+++ b/Client/cms-client/src/components/StudentPages/Clubs/Clubs.css
@@ -25,3 +25,9 @@
         margin-left: 30px;
     } 
 }
+@media (min-width:992px )and (max-width:2000px) {
+    .Clubcard{
+       
+        margin-left: 40px;
+    } 
+}
