--- a/Client/cms-client/src/components/AdminPages/UploadNotice/UploadNotice.css
+++ b/Client/cms-client/src/components/AdminPages/UploadNotice/UploadNotice.css
@@ -2,9 +2,7 @@
     display: flex;
     justify-content: center;
     margin-left: 50px;
-    border-color: black;
-    border: 1px;
-    border-radius: 5px;
-    border-style: solid;
+   
+  margin-top: 50px;
     height: 15rem;
 }
