--- a/Client/cms-client/src/components/AdminPages/viewClass/ViewClass.css
+++ b/Client/cms-client/src/components/AdminPages/viewClass/ViewClass.css
@@ -3,6 +3,7 @@
    display: flex;
    justify-content: center;
    width: 50%;
+   background-color: rgb(172, 171, 171) !important;
    
 }
 .addbtn{
