--- a/Client/cms-client/src/components/AdminPages/Dasgboard/DashBoard.css
+++ b/Client/cms-client/src/components/AdminPages/Dasgboard/DashBoard.css
@@ -35,3 +35,23 @@
       margin: 1rem;
     }
   }
+
+  @media (max-width: 368px) {
+    .paper {
+      height: 150px;
+      width: 10rem;
+      margin-top: 1rem;
+      padding-top: 30px;
+      margin-left: -30px;
+      
+    }
+    .paper1 {
+      height: 150px;
+      width: 10rem;
+      margin-top: 1rem;
+      padding-top: 30px;
+      margin-left: -30px;
+      
+    }
+    
+  }
