--- a/Client/cms-client/src/components/FacultyPages/ViewClubs/ViewClubs.css
+++ b/Client/cms-client/src/components/FacultyPages/ViewClubs/ViewClubs.css
@@ -1,3 +1,24 @@
+.departmentAddBtn1{
+    border-radius: 5px;
+    height: 55px;
+    color: rgb(255, 255, 255) !important;
+    background-color: black !important;
+    border-color: rgb(20, 124, 172);
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    margin-top: 8px !important;
+    
+    }
+    .departmentAddBtn1:hover{
+        color: rgb(0, 0, 0) !important;
+    background-color: rgb(255, 255, 255) !important;
+    
+    border-color: rgb(0, 0, 0) !important;
+    }
+
+
+
+
 .complientMain{
     display: flex;
     justify-content: center;
