--- a/Client/cms-client/src/components/StudentPages/Calendar/Calander.css
+++ b/Client/cms-client/src/components/StudentPages/Calendar/Calander.css
@@ -2,14 +2,18 @@
 /* Add custom styles for the calendar component */
 .eventTitle {
     font-size: 0.9rem !important;
-    line-height: 22px !important;
-    font-weight: bold !important; /* You can adjust the font size as needed */
-  }
+   
+    font-weight: bold !important; 
+   
+    color: rgb(6, 6, 17) !important;
+    line-height: 18px !important
+}
   
-  
-  .maindivCalander{
-    margin-left:62px;
-  }
-  .dayCellEvent{
-    height: 26px !important;
+ 
+
+
+  @media (max-width:1102px) {
+    .maindivCalander{
+        margin-left:50px;
+      }
   }
