pages makes to responcieve and create new api payment history it shows in admin

--- a/Client/cms-client/src/components/FacultyPages/ClubRequests/ClubRequest.css
+++ b/Client/cms-client/src/components/FacultyPages/ClubRequests/ClubRequest.css
@@ -1,3 +1,11 @@
 .StudentResultTable{
     margin-left: 50px;
 }
+.clubReqTitle{
+    margin-top: 10px;
+}
+@media (max-width:880px) {
+    .clubReqTitle{
+        margin-left: 50px;
+    }
+}
