--- a/Client/cms-client/src/components/StudentPages/LeaveLetter/LeaveLetter.css
+++ b/Client/cms-client/src/components/StudentPages/LeaveLetter/LeaveLetter.css
@@ -8,3 +8,8 @@
 .formleavedate{
     padding-left: 11rem !important;
 }
+@media (max-width:388px) {
+    .leetterformStayle{
+        margin-left: 10px;
+    }
+}
