--- a/Client/cms-client/src/components/Pages/FacultyPages/Chat/Chat.css
+++ b/Client/cms-client/src/components/Pages/FacultyPages/Chat/Chat.css
@@ -8,7 +8,7 @@
 .Left-side-chat {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .Chat-container {
@@ -71,4 +71,7 @@
   .follower.conversation > div > .name {
     display: none;
   }
+}
+@media (max-width:768px) {
+  
 }
