chat css updated

--- a/Client/cms-client/src/components/Pages/StudentPages/Chat/Chat.css
+++ b/Client/cms-client/src/components/Pages/StudentPages/Chat/Chat.css
@@ -71,10 +71,25 @@
 }
 
 @media screen and (max-width: 768px) {
-  .Chat {
-    grid-template-columns: 16% auto;
+  
+  
+  .Right-Blocker{
+    display: none !important;
   }
-  .follower.conversation > div > .name {
-    display: none;
+  .Left-Blocker{
+    display: none !important;
+  }
+  .Right-Un-Blocker{
+    display: block !important;
+  }
+  .Left-side-chat{
+  
+    width: 600%;
+  }
+  .name{
+    display: inline !important;
+  }
+  .userName{
+    padding-top: 50px;
   }
 }
